WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110562
[BlackBerry] ChromeClientBlackBerry: fix variable names
https://bugs.webkit.org/show_bug.cgi?id=110562
Summary
[BlackBerry] ChromeClientBlackBerry: fix variable names
Alberto Garcia
Reported
2013-02-22 00:12:37 PST
manager was incorrectly renamed back to tracker in
r138696
:
http://trac.webkit.org/changeset/138696/trunk/Source/WebKit/blackberry/WebCoreSupport/ChromeClientBlackBerry.cpp
Attachments
Patch
(1.76 KB, patch)
2013-02-22 00:14 PST
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-02-22 00:14:31 PST
Created
attachment 189704
[details]
Patch
Rob Buis
Comment 2
2013-02-22 05:39:38 PST
Comment on
attachment 189704
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2013-02-22 06:25:34 PST
Comment on
attachment 189704
[details]
Patch Rejecting
attachment 189704
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 189704, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Full output:
http://queues.webkit.org/results/16693903
Build Bot
Comment 4
2013-02-22 21:03:48 PST
Comment on
attachment 189704
[details]
Patch
Attachment 189704
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/16723317
New failing tests: http/tests/inspector/appcache/appcache-manifest-with-non-existing-file.html
WebKit Review Bot
Comment 5
2013-02-25 00:11:07 PST
Comment on
attachment 189704
[details]
Patch Clearing flags on attachment: 189704 Committed
r143888
: <
http://trac.webkit.org/changeset/143888
>
WebKit Review Bot
Comment 6
2013-02-25 00:11:12 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug