[BlackBerry] ChromeClientBlackBerry: fix variable names https://bugs.webkit.org/show_bug.cgi?id=110562

Patch by Alberto Garcia <albgarcia@rim.com> on 2013-02-25
Reviewed by Rob Buis.

manager was incorrectly renamed back to tracker in r138696:
http://trac.webkit.org/changeset/138696/trunk/Source/WebKit/blackberry/WebCoreSupport/ChromeClientBlackBerry.cpp

* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore::ChromeClientBlackBerry::exceededDatabaseQuota):

Canonical link: https://commits.webkit.org/129004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143888 268f45cc-cd09-0410-ab3c-d52691b4dbfc